--- a/src/assets/css/launcher.css
+++ b/src/assets/css/launcher.css
@@ -110,6 +110,11 @@ input::-webkit-inner-spin-button {
     background: var(--background);
     border-radius: 15px;
     z-index: 10;
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+    height: 20%;
 }
 
 .popup-title {
@@ -137,6 +142,7 @@ input::-webkit-inner-spin-button {
 }
 
 .panel {
+    transition: opacity 0.4s ease, transform 0.4s ease;
     position: absolute;
     width: 100%;
     height: 100%;
@@ -149,4 +155,21 @@ input::-webkit-inner-spin-button {
     opacity: 1;
     z-index: 1;
     pointer-events: all;
+}
+body.global {
+    background-color: #000;
+    background-size: cover;
+}
+
+body.global::before {
+    content: "";
+    position: fixed;
+    top: 0;
+    left: 0;
+    right: 0;
+    bottom: 0;
+    background-image: inherit;
+    background-size: cover;
+    filter: blur(10px);
+    z-index: -1;
 }
