change the author position and add splash message
Update 3.0.1

--- a/src/assets/css/index.css
+++ b/src/assets/css/index.css
@@ -50,7 +50,7 @@ img {
 
 .splash-author {
     position: absolute;
-    top: 326px;
+    bottom: 20px;
     left: 0px;
     width: 400px;
     text-align: center;
