--- a/src/assets/css/panels/login.css
+++ b/src/assets/css/panels/login.css
@@ -27,14 +27,20 @@
 
 .connect,
 .cancel {
-    background: #ff0000;
-    color: var(--color);
-    border: none;
-    border-radius: 10px;
-    padding: 0.3rem 4rem;
-    font-size: inherit;
-    font-weight: bold;
-    margin: 15px 10px;
+  background: #ff0000;
+  color: var(--color);
+  border: none;
+  border-radius: 10px;
+  padding: 0.3rem 4rem;
+  font-size: inherit;
+  font-weight: bold;
+  margin: 15px 10px;
+  transition: transform 0.3s ease, border 0.3s ease;
+}
+
+.cancel:hover {
+  transform: scale(1.1);
+  border: 2px solid white;
 }
 
 .input-login .email,
