--- a/src/assets/css/theme.css
+++ b/src/assets/css/theme.css
@@ -1,5 +1,6 @@
 .global {
     --element-color: #7b52b9;
+    --gray-border-color: #808080;
     --transition: all 0.5s cubic-bezier(1, 0.46, 0, 1.29);
     --dark-color: #292929;
     --light-color: rgb(245, 245, 245);
